--- a/sciProg1-visualization.Rmd
+++ b/sciProg1-visualization.Rmd
@@ -73,7 +73,9 @@ mers <- read_csv("https://raw.githubusercontent.com/awpark/learnR/master/cases.c
 
 ## Formatting some dates
 
-We can inspect the data using the base R function `head`, which displays the first few rows of data. Try doing this for the data frame "mers" that we have just created. If you're ever unsure how to complete a coding challenge in this module, you can click the "solution" button.
+We can inspect the data using the base R function `head`, which displays the first few rows of data. 
+
+*Task 1: Try doing this for the data frame "mers" that we have just created. If you're ever unsure how to complete a coding challenge in this module, you can click the "solution" button.*
 
 ```{r inspectData1-setup, echo=FALSE, message=F, warning=FALSE}
 library(tidyverse)
@@ -92,7 +94,9 @@ head(mers)
 
 
 
-We can additionally find out what kind of data are stored in a particular column of a data frame using the base function `class`. Columns are referred to using the `$` sign. For example, the column "onset" in the "mers" data frame is referred to by `mers$onset`. What type of data are stored in the column "onset". 
+We can additionally find out what kind of data are stored in a particular column of a data frame using the base function `class`. Columns are referred to using the `$` sign. For example, the column "onset" in the "mers" data frame is referred to by `mers$onset`. 
+
+*Task 2: Using the function `class`, determine the type of data stored in the column "onset".*
 
 ```{r inspectData2-setup, echo=FALSE, message=F, warning=FALSE}
 library(tidyverse)
@@ -160,7 +164,9 @@ mers %>% ggplot(.) +
        caption="Data from: https://github.com/rambaut/MERS-Cases/blob/gh-pages/data/cases.csv")
 ```
 
-We can use this example to produce another plot. At the beginning of the new chunk, add a line that creates a new column called "age2" which will just be the numeric version of age (which is stored as 'character' data because some data were entered with uncertainty, e.g. "?60" or as a threshold, e.g. "60+"). Data like these won't be plotted because they will be converted to NA when we try to make them numeric. Next, make a plot where "age2" is the x-axis and case count is plotted as before. To tidy things up, we'll put a few steps between naming the data frame and passing it through a pipe to ggplot. Specifically we will (i) use the `drop_na` function to remove NA values in age and gender columns; (ii) `filter` data so that only entries with "M" or "F" in the gender column are plotted. You should also update the x, y, and title labels. If you're not sure how to complete the plot, use the hints buttons. 
+We can use this example to produce another plot. At the beginning of the new chunk, add a line that creates a new column called "age2" which will just be the numeric version of age (which is stored as 'character' data because some data were entered with uncertainty, e.g. "?60" or as a threshold, e.g. "60+"). Data like these won't be plotted because they will be converted to NA when we try to make them numeric. 
+
+*Task 3: Next, make a plot where "age2" is the x-axis and case count is plotted as before. To tidy things up, we'll put a few steps between naming the data frame and passing it through a pipe to ggplot. Specifically we will (i) use the `drop_na` function to remove NA values in age and gender columns; (ii) `filter` data so that only entries with "M" or "F" in the gender column are plotted. You should also update the x, y, and title labels. If you're not sure how to complete the plot, use the hints buttons.*
 
 ```{r ageSex-setup, echo=FALSE, message=F, warning=FALSE}
 library(tidyverse)
@@ -224,7 +230,9 @@ mers %>% ggplot(.) +
        caption="Data from: https://github.com/rambaut/MERS-Cases/blob/gh-pages/data/cases.csv")
 ```
 
-While the code is correct, we have negative infectious periods! This is because of nosocomial transmission (occurring in a hospital). When a patient is admitted to hospital for a non-MERS reason then later acquires MERS in hospital, their hospitalization date will precede their symptoms onset date. Copy the histogram plotting code above into the empty code chunk below and add a filter between "mers" and "ggplot" so that we only plot positive infectious period data".
+While the code is correct, we have negative infectious periods! This is because of nosocomial transmission (occurring in a hospital). When a patient is admitted to hospital for a non-MERS reason then later acquires MERS in hospital, their hospitalization date will precede their symptoms onset date. 
+
+*Task 4: Copy the histogram plotting code above into the empty code chunk below and add a filter between "mers" and "ggplot" so that we only plot positive infectious period data".*
 
 ```{r histoIPpos-setup,echo=FALSE, message=F, warning=FALSE}
 library(tidyverse)
@@ -269,7 +277,7 @@ mers %>% filter(infectious.period>0) %>% ggplot(.,aes(x=epi.day,y=infectious.per
        caption="Data from: https://github.com/rambaut/MERS-Cases/blob/gh-pages/data/cases.csv")
 ```
 
-Copy the code that made the scatter plot into the empty code chunk below and modify it two ways: (i) add an "and" statement (using the "&" symbol) to the filter function so that we only plot infectious periods (IP) with values 0<IP<50; (ii) add a trend line layer using the geom_smooth function. 
+*Task 5: Copy the code that made the scatter plot into the empty code chunk below and modify it two ways: (i) add an "and" statement (using the "&" symbol) to the filter function so that we only plot infectious periods (IP) with values 0<IP<50; (ii) add a trend line layer using the geom_smooth function.*
 
 ```{r IPvsTimeSmooth-setup,echo=FALSE, message=F, warning=FALSE}
 library(tidyverse)
@@ -327,7 +335,7 @@ mers %>% filter(infectious.period>0 & infectious.period<50 & country %in% c("Jor
        caption="Data from: https://github.com/rambaut/MERS-Cases/blob/gh-pages/data/cases.csv")
 ```
 
-Using the example above as a guide, create a new plot that inspects the age (remember the numeric column is "age2") of patients whose infection is either "clinical", "subclinical", or "fatal" (column="clinical", and you'll have to filter to only the 3 outcomes listed). For each of the three outcomes, visualize ages as a boxplot ("geom_boxplot()") and use faceting to show separate panels for every country (14 countries in total). While this sounds complex, you'll see this can all be achieved in one line of code. Good luck!
+*Task 6: Using the example above as a guide, create a new plot that inspects the age (remember the numeric column is "age2") of patients whose infection is either "clinical", "subclinical", or "fatal" (column="clinical", and you'll have to filter to only the 3 outcomes listed). For each of the three outcomes, visualize ages as a boxplot ("geom_boxplot()") and use faceting to show separate panels for every country (14 countries in total). While this sounds complex, you'll see this can all be achieved in one line of code. Good luck!*
 
 ```{r boxplot-setup,echo=FALSE, message=F, warning=FALSE}
 library(tidyverse)
