--- a/sciProg3-wrangling.Rmd
+++ b/sciProg3-wrangling.Rmd
@@ -29,12 +29,15 @@ library(learnr)
 
 ## Introduction
 
-This is the third in a series of exercises that constitute _Training Module 1: Introduction to Scientific Programming_, taught through the IDEAS PhD program at the University of Georgia Odum School of Ecology in conjunction with the Center for the Ecology of Infectious Diseases. 
+![](images/IDEAS_logo.jpg){width=50%}
 
-If coding in R is relatively new to you, you may find it helpful to first watch this introductory video that introduces ideas we'll be using
+This is the third in a series of modules that constitute *Introduction to Scientific Programming*, taught through the IDEAS PhD program at the University of Georgia's Odum School of Ecology in conjunction with the Center for the Ecology of Infectious Diseases. Content was created by Andrew W. Park and John M. Drake, with the self-study version coded by Andrew W. Park. Development of this module was supported by the Interdisciplinary Disease Ecology Across Scales (IDEAS) graduate training program under NSF grant number: DGE-1545433.
+
+This exercise explores methods of data wrangling, which is essentially the good practices associated with storing and manipulating data. Recommended reading for this module is the book *R for Data Science* by Hadley Wickham and Garret Grolemund (O'Reilly Media, 2017). If coding in R is relatively new to you, you may find it helpful to first watch this introductory video that introduces ideas we'll be using for data wrangling. 
+
 ![](https://youtu.be/yGrsbtAmUmI)
 
-This exercise explores methods of data wrangling, which is essentially the good practices associated with storing and manipulating data. This module uses the libraries `tidyverse` and `magrittr`. Load these libraries.
+This module uses the libraries `tidyverse` and `magrittr`. Load these libraries.
 
 ```{r libLoad, exercise=TRUE, exercise.eval=TRUE, message=FALSE, warning=FALSE}
 
